test/typeerrors/ex19.golden
Building file ../test/typeerrors/ex19.act
  Compiling ex19.act for release

ERROR: Error when compiling ex19 module: Type error

Cannot satisfy the following simultaneous constraints for the unknown types t0, t1:

  |
7 |a = f(3,"hej")
  |      ^
The type of 3 (which we call t0) must implement __builtin__.Number

  |
7 |a = f(3,"hej")
  |    ^
f has had its polymorphic type [A(Plus, Ord)] => (A, A) -> A instantiated to (t1, t1) -> t1, so t1 must implement __builtin__.Ord

  |
7 |a = f(3,"hej")
  |    ^
f has had its polymorphic type [A(Plus, Ord)] => (A, A) -> A instantiated to (t1, t1) -> t1, so t1 must implement __builtin__.Plus

  |
7 |a = f(3,"hej")
  |    ^^^^^^^^^^
Type incompatibility between definition of and call of f
f is inferred to have a type of the form [T_2(__builtin__.Plus, __builtin__.Ord)] => (T_2, T_2) -> T_2

  |
7 |a = f(3,"hej")
  |    ^^^^^^^^^^
Type incompatibility between definition of and call of f
f is inferred to have a type of the form [T_2(__builtin__.Plus, __builtin__.Ord)] => (T_2, T_2) -> T_2

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

